--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,15 +1,15 @@
 <!doctype html>
-
+<meta name = "viewport" content = "width=divice-width, initial-scale=1.0">
 <html>
 <head>
-	<title>My HCI Friends</title>	
+	<title>My HCI Friends</title>
 	<meta charset="utf-8">
-	
+
 </head>
 
 <body>
 	<h1>My HCI Friends</h1>
-
+	<div class = "container">
 	<form id="addFriendForm" role="form" method="get" action="/add">
 		<h3>Add a friend</h3>
 	    <div class="form-group">
@@ -22,5 +22,6 @@
 	    </div>
 	    <input type="submit" id="submitBtn" class="btn btn-default" value="Add the friend"></input>
 	</form>
+</div>
 </body>
 </html>
